--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
   border: 1px solid rgba(0, 0, 0, 0.2);
   display: block;
   padding: 0.5em;
-  width: 35%;
+  width: 36%;
   height: 30px;
   margin-left: auto;
   margin-right: auto;
@@ -76,4 +76,9 @@ footer{
 
 li{
   display: inline;
+}
+
+#letras-seleccionadas{
+  position: relative;
+  float: inline-end;
 }
