--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.titulo {
-  padding: 15px;
-  width: 30vw;
-}
-
 .btn {
   border: 0;
   color: white;
@@ -114,7 +109,21 @@ li{
   color: white;
 }
 
-#letras-incorrectas{
+.letra-incorrecta{
   color: red;
   font-size: 30px;
+}
+
+.mensaje-ganaste{
+  position: relative;
+  margin: 0px auto;
+  color: green;
+  font-size: 100px;
+}
+
+.mensaje-perdiste{
+  position: relative;
+  margin: 0px auto;
+  color: red;
+  font-size: 100px;
 }
