falta resetear el juego cuando empece a jugar y apreto el boton de iniciar juego

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ li{
   margin-left: 1px;
   margin-right: 1px;
   font-size: 50px;
-  color: green; /* ESTE COLOR LO TENGO QUE CAMBIAR A BLANCO */
+  color: green;
 }
 
 .letras-pal-sorteada{
